--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     <div class="w-full max-w-4xl mx-auto">
         <header class="text-center mb-8">
-            <h1 class="text-4xl md:text-5xl font-bold text-cyan-400">Sorteio de Aniversário do BEMAD</h1>
-            <p class="text-gray-400 mt-2">Use uma planilha do Google Sheets como sua lista de participantes.</p>
+            <h1 class="text-4xl md:text-5xl font-bold text-cyan-400">Rifa de Fim de Ano do BEMAD</h1>
+            <p class="text-gray-400 mt-2">Use uma planilha do Google Sheets como sua lista de números.</p>
         </header>
 
         <main class="space-y-6">
@@ -71,7 +71,7 @@
                 <h2 class="text-xl font-semibold mb-4 text-cyan-300">1. Prepare sua Planilha</h2>
                 <div class="text-gray-300 space-y-2 text-sm">
                     <p>1. Crie uma aba em sua planilha chamada <strong>Participantes</strong> (com 'P' maiúsculo).</p>
-                    <p>2. Adicione todos os nomes na <strong>coluna A</strong> dessa aba.</p>
+                    <p>2. Adicione todos os números na <strong>coluna A</strong> dessa aba.</p>
                     <p>3. Clique no botão <strong>Compartilhar</strong> no canto superior direito.</p>
                     <p>4. Em "Acesso geral", mude para <strong>Qualquer pessoa com o link</strong> e copie o link.</p>
                 </div>
@@ -273,7 +273,7 @@
             winnerDisplay.innerHTML = `
                 <div class="winner-animate">
                     <p class="text-3xl md:text-4xl text-green-400 font-bold">${announcement}</p>
-                    <p class="text-xs text-gray-500 mt-2">✨ Anúncio gerado por IA</p>
+    
                 </div>`;
             renderLists();
         };
